src/main/java/com/example/signalapp/error/SignalAppConflictException.java
package com.example.signalapp.error;

import lombok.Getter;

@Getter
public class SignalAppConflictException extends SignalAppException {

    public SignalAppConflictException(SignalAppErrorCode errorCode) {
        super(errorCode);
    }

}
